// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`details > passes through additional html attributes 1`] = `
<details
  class="details class1"
  data-marko="{"ontoggle":"toggleDetails s0 false","onclick":"clickDetails s0 false"}"
  data-marko-key="@root s0"
  data-passed-through="true"
  data-testid="AttributePassthrough"
  style="color:red"
  type="number"
>
  <div
    class="details__content"
    data-marko-key="5 s0"
  />
</details>
`;

exports[`details > passes through additional html attributes 2`] = `
<details
  class="details class1"
  data-marko="{"ontoggle":"toggleDetails s0 false","onclick":"clickDetails s0 false"}"
  data-marko-key="@root s0"
  data-passed-through="true"
  data-testid="AttributePassthrough"
  style="color:red"
  type="number"
>
  <div
    class="details__content"
    data-marko-key="5 s0"
  />
</details>
`;

exports[`details > renders as div version 1`] = `
"[36m<DocumentFragment>[39m
  [36m<details[39m
    [33mclass[39m=[32m"details"[39m
    [33mdata-marko[39m=[32m"{\\"ontoggle\\":\\"toggleDetails s0 false\\",\\"onclick\\":\\"clickDetails s0 false\\"}"[39m
    [33mdata-marko-key[39m=[32m"@root s0"[39m
  [36m>[39m
    [36m<summary[39m
      [33mclass[39m=[32m"details__summary"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"details__label"[39m
      [36m>[39m
        [0mopen[0m
      [36m</span>[39m
      [36m<span[39m
        [33mclass[39m=[32m"details__icon"[39m
        [33mhidden[39m=[32m""[39m
      [36m>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--16"[39m
          [33mdata-marko-key[39m=[32m"@svg s0-4-0"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<defs[39m
            [33mdata-marko-key[39m=[32m"@defs s0-4-0"[39m
          [36m>[39m
            [36m<symbol[39m
              [33mid[39m=[32m"icon-chevron-down-16"[39m
              [33mviewBox[39m=[32m"0 0 16 16"[39m
            [36m>[39m
              [36m<path[39m
                [33md[39m=[32m"M8.707 12.707a1 1 0 0 1-1.414 0l-6-6a1 1 0 0 1 1.414-1.414L8 10.586l5.293-5.293a1 1 0 1 1 1.414 1.414l-6 6Z"[39m
              [36m/>[39m
            [36m</symbol>[39m
          [36m</defs>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-chevron-down-16"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</summary>[39m
    [36m<div[39m
      [33mclass[39m=[32m"details__content"[39m
      [33mdata-marko-key[39m=[32m"5 s0"[39m
    [36m>[39m
      [0mbody content[0m
    [36m</div>[39m
  [36m</details>[39m
[36m</DocumentFragment>[39m"
`;

exports[`details > renders basic version 1`] = `
"[36m<DocumentFragment>[39m
  [36m<details[39m
    [33mclass[39m=[32m"details"[39m
    [33mdata-marko[39m=[32m"{\\"ontoggle\\":\\"toggleDetails s0 false\\",\\"onclick\\":\\"clickDetails s0 false\\"}"[39m
    [33mdata-marko-key[39m=[32m"@root s0"[39m
  [36m>[39m
    [36m<summary[39m
      [33mclass[39m=[32m"details__summary"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"details__label"[39m
      [36m>[39m
        [0mopen[0m
      [36m</span>[39m
      [36m<span[39m
        [33mclass[39m=[32m"details__icon"[39m
        [33mhidden[39m=[32m""[39m
      [36m>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--16"[39m
          [33mdata-marko-key[39m=[32m"@svg s0-4-0"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<defs[39m
            [33mdata-marko-key[39m=[32m"@defs s0-4-0"[39m
          [36m>[39m
            [36m<symbol[39m
              [33mid[39m=[32m"icon-chevron-down-16"[39m
              [33mviewBox[39m=[32m"0 0 16 16"[39m
            [36m>[39m
              [36m<path[39m
                [33md[39m=[32m"M8.707 12.707a1 1 0 0 1-1.414 0l-6-6a1 1 0 0 1 1.414-1.414L8 10.586l5.293-5.293a1 1 0 1 1 1.414 1.414l-6 6Z"[39m
              [36m/>[39m
            [36m</symbol>[39m
          [36m</defs>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-chevron-down-16"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</summary>[39m
    [36m<div[39m
      [33mclass[39m=[32m"details__content"[39m
      [33mdata-marko-key[39m=[32m"5 s0"[39m
    [36m>[39m
      [0mbody content[0m
    [36m</div>[39m
  [36m</details>[39m
[36m</DocumentFragment>[39m"
`;

exports[`details > renders center version 1`] = `
"[36m<DocumentFragment>[39m
  [36m<details[39m
    [33mclass[39m=[32m"details"[39m
    [33mdata-marko[39m=[32m"{\\"ontoggle\\":\\"toggleDetails s0 false\\",\\"onclick\\":\\"clickDetails s0 false\\"}"[39m
    [33mdata-marko-key[39m=[32m"@root s0"[39m
  [36m>[39m
    [36m<summary[39m
      [33mclass[39m=[32m"details__summary details__summary--center"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"details__label"[39m
      [36m>[39m
        [0mopen[0m
      [36m</span>[39m
      [36m<span[39m
        [33mclass[39m=[32m"details__icon"[39m
        [33mhidden[39m=[32m""[39m
      [36m>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--16"[39m
          [33mdata-marko-key[39m=[32m"@svg s0-4-0"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<defs[39m
            [33mdata-marko-key[39m=[32m"@defs s0-4-0"[39m
          [36m>[39m
            [36m<symbol[39m
              [33mid[39m=[32m"icon-chevron-down-16"[39m
              [33mviewBox[39m=[32m"0 0 16 16"[39m
            [36m>[39m
              [36m<path[39m
                [33md[39m=[32m"M8.707 12.707a1 1 0 0 1-1.414 0l-6-6a1 1 0 0 1 1.414-1.414L8 10.586l5.293-5.293a1 1 0 1 1 1.414 1.414l-6 6Z"[39m
              [36m/>[39m
            [36m</symbol>[39m
          [36m</defs>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-chevron-down-16"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</summary>[39m
    [36m<div[39m
      [33mclass[39m=[32m"details__content"[39m
      [33mdata-marko-key[39m=[32m"5 s0"[39m
    [36m>[39m
      [0mbody content[0m
    [36m</div>[39m
  [36m</details>[39m
[36m</DocumentFragment>[39m"
`;

exports[`details > renders in open state 1`] = `
"[36m<DocumentFragment>[39m
  [36m<details[39m
    [33mclass[39m=[32m"details"[39m
    [33mdata-marko[39m=[32m"{\\"ontoggle\\":\\"toggleDetails s0 false\\",\\"onclick\\":\\"clickDetails s0 false\\"}"[39m
    [33mdata-marko-key[39m=[32m"@root s0"[39m
  [36m>[39m
    [36m<summary[39m
      [33mclass[39m=[32m"details__summary"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"details__label"[39m
      [36m>[39m
        [0mopen[0m
      [36m</span>[39m
      [36m<span[39m
        [33mclass[39m=[32m"details__icon"[39m
        [33mhidden[39m=[32m""[39m
      [36m>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--16"[39m
          [33mdata-marko-key[39m=[32m"@svg s0-4-0"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<defs[39m
            [33mdata-marko-key[39m=[32m"@defs s0-4-0"[39m
          [36m>[39m
            [36m<symbol[39m
              [33mid[39m=[32m"icon-chevron-down-16"[39m
              [33mviewBox[39m=[32m"0 0 16 16"[39m
            [36m>[39m
              [36m<path[39m
                [33md[39m=[32m"M8.707 12.707a1 1 0 0 1-1.414 0l-6-6a1 1 0 0 1 1.414-1.414L8 10.586l5.293-5.293a1 1 0 1 1 1.414 1.414l-6 6Z"[39m
              [36m/>[39m
            [36m</symbol>[39m
          [36m</defs>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-chevron-down-16"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</summary>[39m
    [36m<div[39m
      [33mclass[39m=[32m"details__content"[39m
      [33mdata-marko-key[39m=[32m"5 s0"[39m
    [36m>[39m
      [0mbody content[0m
    [36m</div>[39m
  [36m</details>[39m
[36m</DocumentFragment>[39m"
`;

exports[`details > renders small version 1`] = `
"[36m<DocumentFragment>[39m
  [36m<details[39m
    [33mclass[39m=[32m"details"[39m
    [33mdata-marko[39m=[32m"{\\"ontoggle\\":\\"toggleDetails s0 false\\",\\"onclick\\":\\"clickDetails s0 false\\"}"[39m
    [33mdata-marko-key[39m=[32m"@root s0"[39m
  [36m>[39m
    [36m<summary[39m
      [33mclass[39m=[32m"details__summary details__summary--small"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"details__label"[39m
      [36m>[39m
        [0mopen[0m
      [36m</span>[39m
      [36m<span[39m
        [33mclass[39m=[32m"details__icon"[39m
        [33mhidden[39m=[32m""[39m
      [36m>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--16"[39m
          [33mdata-marko-key[39m=[32m"@svg s0-4-0"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<defs[39m
            [33mdata-marko-key[39m=[32m"@defs s0-4-0"[39m
          [36m>[39m
            [36m<symbol[39m
              [33mid[39m=[32m"icon-chevron-down-16"[39m
              [33mviewBox[39m=[32m"0 0 16 16"[39m
            [36m>[39m
              [36m<path[39m
                [33md[39m=[32m"M8.707 12.707a1 1 0 0 1-1.414 0l-6-6a1 1 0 0 1 1.414-1.414L8 10.586l5.293-5.293a1 1 0 1 1 1.414 1.414l-6 6Z"[39m
              [36m/>[39m
            [36m</symbol>[39m
          [36m</defs>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-chevron-down-16"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</summary>[39m
    [36m<div[39m
      [33mclass[39m=[32m"details__content"[39m
      [33mdata-marko-key[39m=[32m"5 s0"[39m
    [36m>[39m
      [0mbody content[0m
    [36m</div>[39m
  [36m</details>[39m
[36m</DocumentFragment>[39m"
`;
